--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="./src/favicon.png">
         <link href="./src/main.css" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -17,8 +18,8 @@
             }
         </script>
         
-        <nav id="navbar" class="navbar navbar-expand-md bg-dark navbar-dark">
-            <div class="container-fluid">
+        <nav id="navbar" class="navbar fixed-top navbar-expand-md bg-dark navbar-dark">
+            <div class="container">
                 <a href="./index.html" style="padding-right: 3.5em"><img src="./src/gameTitle.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
