--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <title>TJ!JAPARITALE</title>
+        <title>TJ!JAPARITALE - FAQ</title>
     </head>
     <body>
         <script>
@@ -102,12 +102,8 @@
 
                 <footer>
                     <p class="footer"  style="padding-top: 3em;">
-                        UNDERTALE and DELTARUNE by Toby Fox 2015-2021
-                    </p>
-                    <p class="footer">
-                        TJ!JAPARITALE by Team Japari 2021-2021
-                    </p>
-                    <p class="footer" style="padding-bottom: 3em;">
+                        UNDERTALE and DELTARUNE by Toby Fox 2015-2021<br>
+                        TJ!JAPARITALE by Team Japari 2021-2021<br>
                         (We are not affliated with Toby Fox!)
                     </p>
                 </footer>
