--- a/index.html
+++ b/index.html
@@ -71,12 +71,8 @@
                 </div>
                 <footer>
                     <p class="footer"  style="padding-top: 3em;">
-                        UNDERTALE and DELTARUNE by Toby Fox 2015-2021
-                    </p>
-                    <p class="footer">
-                        TJ!JAPARITALE by Team Japari 2021-2021
-                    </p>
-                    <p class="footer" style="padding-bottom: 3em;">
+                        UNDERTALE and DELTARUNE by Toby Fox 2015-2021<br>
+                        TJ!JAPARITALE by Team Japari 2021-2021<br>
                         (We are not affliated with Toby Fox!)
                     </p>
                 </footer>
