Hopefully fixed the social media issue.

--- a/faq.html
+++ b/faq.html
@@ -123,6 +123,7 @@
         </div>
         <script>
             document.getElementById('socialLinks').style.visibility = (isMobileDevice() ? 'hidden' : 'visible');
+            document.getElementById('socialLinks').style.display = (isMobileDevice() ? 'none' : 'block');
         </script>
     </body>
 </html>
