Some important changes

--- a/credits.html
+++ b/credits.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <title>TJ!JAPARITALE - Credits</title>
+        <title>TK!JAPARITALE - Credits</title>
     </head>
     <body>
         <script>
@@ -46,8 +46,8 @@
                 </div>
                 <div id='socialLinks'>
                     <ul class="nav navbar-nav justify-content-end">
-                        <a href="https://gamejolt.com/games/team-japari-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
-                        <a href="https://github.com/Team-Japari" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
+                        <a href="https://gamejolt.com/games/team-kemofure-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
+                        <a href="https://github.com/Team-Kemofure" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
                         <a href="https://discord.gg/RmzNNXd" style="padding-left: 1em"><img src="./src/discordLogo.png"></a>
                     </ul>
                 </div>
@@ -58,7 +58,7 @@
             <div class="container content">
                 <div class="row">
                     <div class="col-sm-12">
-                        <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TJ!JAPARITALE">
+                        <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TK!JAPARITALE">
                     </div>
                     <h1 class="col-sm-12">Credits</h1>
                     <div class="col-sm-2"></div>
@@ -67,15 +67,12 @@
                             <b style="color: yellow">Team Members</b><br>
                             Coding by TheMasterHavoc and Ilias<br>
                             Spriting by FellTheGoner, Loneélcor<br>
-                            Composing by Snowy and Sarwex<br>
-                            Official art by SleepySage
+                            Composing by Sarwex<br>
+                            Official art by FluorescentlyCloud
                             <br>
                             <br>
                             <b style="color: yellow">Special Thanks</b><br>
-                            Colinator27 for fastening the development<br>
-                            Charles03 for being a great friend<br>
-                            Crossboness for being a great friend<br>
-                            Prince Myriad for being a great friend and supporting the project<br>
+                            Colinator27 for helping during the development<br>
                             にら for huge inspiration and idea of the project<br>
                             Toby Fox for creating Undertale<br>
                             Temmie Chang for creating awesome sprites for Toby Fox's games<br>
@@ -86,15 +83,15 @@
                             Grape-kun, you spread the love of Kemono Friends. Rest in peace...<br>
                             <br>
                             <br>
-                            And <b>YOU</b> for supporting the project's existence<br>
-                            All of this wouldn't be possible without your help! Thank you!
+                            And <b>YOU</b> for supporting the project's existence.<br>
+                            None of this would be possible without your help! Thank you!
                         </p>
                     </div>
                 </div>
                 <footer>
                     <p class="footer"  style="padding-top: 3em;">
                         UNDERTALE and DELTARUNE by Toby Fox 2015-2021<br>
-                        TJ!JAPARITALE by Team Japari 2021-2021<br>
+                        TK!JAPARITALE by Team Kemofure 2021-2021<br>
                         (We are not affliated with Toby Fox!)
                     </p>
                 </footer>
