--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <title>TJ!JAPARITALE - Frequently Asked Questions</title>
+        <title>TK!JAPARITALE - Frequently Asked Questions</title>
     </head>
     <body>
         <script>
@@ -45,8 +45,8 @@
                 </div>
                 <div id='socialLinks'>
                     <ul class="nav navbar-nav justify-content-end">
-                        <a href="https://gamejolt.com/games/team-japari-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
-                        <a href="https://github.com/Team-Japari" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
+                        <a href="https://gamejolt.com/games/team-kemofure-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
+                        <a href="https://github.com/Team-Kemofure" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
                         <a href="https://discord.gg/RmzNNXd" style="padding-left: 1em"><img src="./src/discordLogo.png"></a>
                     </ul>
                 </div>
@@ -56,15 +56,15 @@
         <div class="wrapper">
             <div class="container content">
                 <div class="col-sm-12">
-                    <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TJ!JAPARITALE">
+                    <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TK!JAPARITALE">
                 </div>
                 <h1 class="col-sm-12">Frequently Asked Questions</h1>
                 <div class="col-sm-12">
                     <p class="question">
-                        What is TJ!JAPARITALE?
+                        What is TK!JAPARITALE?
                     </p>
                     <p class="answer">
-                        <b>TJ!Japaritale</b> is a brand new fan-game of Toby Fox's Undertale made by Team Japari that opens a new world of anthropomorphic species called <b>Friends</b>. It is heavily based on the anime, Kemono Friends, so therefore it'd be recommended to watch it to avoid any upcoming spoilers.
+                        <b>TK!Japaritale</b> is a brand new fan-game of Toby Fox's Undertale made by Team Japari that opens a new world of anthropomorphic species called <b>Friends</b>. It is heavily based on the anime, Kemono Friends, so therefore it'd be recommended to watch it to avoid any upcoming spoilers.
                     </p>
 
                     <p class="question">
@@ -91,14 +91,14 @@
                     </ul>
 
                     <p class="question">
-                        Can I make a video on TJ!JAPARITALE?
+                        Can I make a video on TK!JAPARITALE?
                     </p>
                     <p class="answer">
                         We'd love to! Please just make sure that you're properly crediting us. If you're doing a let's play video, at the final episode please show the credits screen at the end. If you are doing a longplay video, be sure to show the credits screen at the end as well! We're looking forward to you making videos about the game!
                     </p>
 
                     <p class="question">
-                        Can I monetize my videos of TJ!JAPARITALE?
+                        Can I monetize my videos of TK!JAPARITALE?
                     </p>
                     <p class="answer">
                         You are allowed to do that as long as you're doing meaningful commentary and properly crediting us. We want people to be credited for their hard work towards this project.
@@ -115,7 +115,7 @@
                 <footer>
                     <p class="footer"  style="padding-top: 3em;">
                         UNDERTALE and DELTARUNE by Toby Fox 2015-2021<br>
-                        TJ!JAPARITALE by Team Japari 2021-2021<br>
+                        TK!JAPARITALE by Team Kemofure 2021-2021<br>
                         (We are not affliated with Toby Fox!)
                     </p>
                 </footer>
