--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <title>TJ!JAPARITALE</title>
+        <title>TK!JAPARITALE</title>
     </head>
     <body>
         <script>
@@ -54,8 +54,8 @@
                 </div>
                 <div id='socialLinks'>
                     <ul class="nav navbar-nav justify-content-end">
-                        <a href="https://gamejolt.com/games/team-japari-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
-                        <a href="https://github.com/Team-Japari" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
+                        <a href="https://gamejolt.com/games/team-kemofure-japaritale/368818" style="padding-left: 1em"><img src="./src/gamejoltLogo.png"></a>
+                        <a href="https://github.com/Team-Kemofure" style="padding-left: 1em"><img src="./src/githubLogo.png"></a>
                         <a href="https://discord.gg/RmzNNXd" style="padding-left: 1em"><img src="./src/discordLogo.png"></a>
                     </ul>
                 </div>
@@ -66,12 +66,12 @@
             <div class="container content">
                 <div class="row">
                     <div class="col-sm-12">
-                        <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TJ!JAPARITALE">
+                        <img class="img-fluid gameTitle" src="./src/gameTitleBig.png" alt="TK!JAPARITALE">
                     </div>
                     <div class="col-sm-2"></div>
                     <div class="col-sm-8">
                         <p class="about">
-                            TJ!Japaritale is a <b>brand new</b> fan-game of Toby Fox's Undertale made by <b>Team Japari</b> that opens a new world of anthropomorphic species called Friends.
+                            TK!Japaritale is a <b>brand new</b> fan-game of Toby Fox's Undertale made by <b>Team Japari</b> that opens a new world of anthropomorphic species called Friends.
                             It is heavily based on the anime, <b>Kemono Friends</b>, so therefore it'd be recommended to watch it to avoid any upcoming spoilers.
                         </p>
                     </div>
@@ -93,7 +93,7 @@
                 <footer>
                     <p class="footer"  style="padding-top: 3em;">
                         UNDERTALE and DELTARUNE by Toby Fox 2015-2021<br>
-                        TJ!JAPARITALE by Team Japari 2021-2021<br>
+                        TK!JAPARITALE by Team Kemofure 2021-2021<br>
                         (We are not affliated with Toby Fox!)
                     </p>
                 </footer>
